Fix gap in info cards

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@
     display: flex;
     align-items: center;
     flex-flow: column wrap;
+    gap: 8px;
 }
 
 .rune {
